feat: implement relative position handling for Bezier connections and update serialization methods